# oxford-genai-llmops-project

.github/workflows/: .ci-initialise.yml
rag-app-poetry/: pyproject.toml
rag-app-poetry/src/rag_app_poetry/: basic_functions.py
rag-app-poetry/tests/: test_unit.py
