[project]
name = "rag-app-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Markus",email = "markus.fuelle@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
packages = [{include = "rag_app_poetry", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
